<resources>
    <string name="app_name">ToDo List</string>
    <string name="app_name_completed_tasks">ToDo List - Completed Tasks</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="blank_title">Enter the Title of the Task</string>
    <string name="blank_description">Enter the Description for the Task</string>
    <string name="task_added">New Task Added Successfully</string>
    <string name="task_updated">Task Updated Successfully</string>
    <string name="task_completed">Task has been marked Complete </string>
    <string name="task_deleted">Task has been Deleted Successfully</string>
    <string name="date_valid">Date should be Present or Future</string>
</resources>
