<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_title"
        android:layout_gravity="center_horizontal"
        android:hint="@string/title"
        android:padding="@dimen/activity_horizontal_margin">
        <requestFocus />
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_description"
        android:layout_gravity="center_horizontal"
        android:hint="@string/description"
        android:padding="@dimen/activity_horizontal_margin"
         />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding ="@dimen/activity_horizontal_margin">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_date"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:hint="@string/date"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageButton_date"
            android:layout_gravity="right"
            android:src="@drawable/calendar"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button_save"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button_cancel"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textAllCaps="false"

        />
    </LinearLayout>
</LinearLayout>